fix: select chevron gap

--- a/src/styles/components/select.css
+++ b/src/styles/components/select.css
@@ -62,7 +62,8 @@
     cursor: pointer;
     font-size: inherit;
     line-height: var(--m__line-height-base);
-    transition: color var(--m__unhover-transition-duration) var(--m__transition-easing);
+    transition: color var(--m__unhover-transition-duration)
+      var(--m__transition-easing);
 
     &:focus-visible {
       outline: none;
@@ -101,7 +102,8 @@
     transform: translateY(-50%);
     pointer-events: none;
     color: var(--m__text-caption-color);
-    transition: color var(--m__unhover-transition-duration) var(--m__transition-easing);
+    transition: color var(--m__unhover-transition-duration)
+      var(--m__transition-easing);
   }
 }
 
@@ -190,7 +192,7 @@
     align-items: center;
     flex: 1;
     min-width: 0;
-    gap: 0.35em;
+    gap: 0.2em;
 
     &:focus-within {
       outline: none;
